Stubbing Admin controllers, starting Navigation.

--- a/app/views/dinners/_dinner.html.erb
+++ b/app/views/dinners/_dinner.html.erb
@@ -1,5 +1,5 @@
 <p>
   <h3><%=dinner.date%></h2><br>
   <h4><%=dinner.chefs%></h3>
-  if user_signed_in? link_to "Reserve", new_dinner_reservation_path
+  <%= reserve_or_sign_up(dinner) %>
 </p>
