--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,8 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
+  <%= render "/layouts/navigation" %>
   <body>
-    <%= link_to "Sign in with Google", user_google_oauth2_omniauth_authorize_path %>
     <%= yield %>
   </body>
 </html>
