--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   </head>
-  <%= render "/layouts/navigation" %>
+  <%= render "/layouts/navigation" %><br>
   <body>
     <%= yield %>
   </body>
