Added flash messages to layout and duplicate reservation redirection.

--- a/app/views/layouts/_user_navigation.html.erb
+++ b/app/views/layouts/_user_navigation.html.erb
@@ -1,1 +1,1 @@
-<%=link_to "Existing Reservations", user_reservations_path(current_user) %>  <%=link_to "Upcoming Dinners", dinners_path %>  <%=link_to "Tasting Notes", user_dishes_path(current_user) %>
+<%=link_to "Existing Reservations", user_reservations_path(current_user) %>  <%=link_to "Upcoming Dinners", dinners_path %>  <%=link_to "Tasting Notes", user_dishes_path(current_user) %> <%=link_to "Sign Out", destroy_user_session_path %>
