--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -1,2 +1,2 @@
 <%= "Reservation on #{display_datetime(@reservation.date)}:"%>
-<%= render partial:'form', locals:{reservation: reservation} %>
+<%= render partial:'form', locals:{reservation: @reservation} %>
