--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   </head>
   <%= render "/layouts/navigation" %><br>
+  <%= render "/layouts/messages" %><br>
   <body>
     <%= yield %>
   </body>
