--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,8 +1,8 @@
 <h4>All Reservations</h4>
 
 <h5>Upcoming</h5>
-<%= render partial: "dinners/dinners", collection: current_user.dinners %>
+<%= render partial: "dinners/dinners", collection: current_user.dinners.in_the_future, locals: { time: "past" } %>
 
 
 <h5>Past</h5>
-  render each past reservation
+<%= render partial: "dinners/dinners", collection: current_user.dinners.in_the_past, locals: { time: "future" } %>
