--- a/app/views/dinners/show.html.erb
+++ b/app/views/dinners/show.html.erb
@@ -1,1 +1,1 @@
-<%= render partial: "dinners/dinner", locals: {dinner: @dinner} %>
+<%= render partial: "dinners/dinner", locals: {dinner: @dinner, commentable: true} %>
