--- a/app/views/dishes/_dishes.html.erb
+++ b/app/views/dishes/_dishes.html.erb
@@ -1,8 +1,10 @@
 
-<%= dishes.name %>
-<%= dishes.ingredients.to_s %>
+<%= dishes.name %><br>
+<%= dishes.ingredients.map(&:name).join ', ' %>
 
 <% if commentable == true %>
-  <h5>Comments:</h5>
-  <%= render partial: 'comments/comments', collection: dishes.comments %>
+  <details>
+    <summary>See Comments...</summary>
+    <%= render partial: 'comments/comments', collection: dishes.comments %>
+  </details>
 <% end %>
