--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,2 +1,2 @@
-<%= link_to "HOME", root_path %>
+<li class="navbar-item"><%= link_to "HOME", root_path, class: "navbar-link"  %></li>
 <%= contextual_navigation %>
