--- a/app/views/layouts/_guest_navigation.html.erb
+++ b/app/views/layouts/_guest_navigation.html.erb
@@ -1,1 +1,2 @@
-  <%=link_to "Sign Up", new_user_registration_path %>  <%=link_to "Sign In", new_user_session_path %>
+  <li class="navbar-item"><%=link_to "Sign Up", new_user_registration_path %></li>
+  <li class="navbar-item"><%=link_to "Sign In", new_user_session_path %></li>
