--- a/app/views/layouts/_user_navigation.html.erb
+++ b/app/views/layouts/_user_navigation.html.erb
@@ -1,1 +1,3 @@
-<%=link_to "Existing Reservations", user_reservations_path(current_user) %> <%=link_to "Tasting Notes", user_dishes_path(current_user) %> <%=link_to "Sign Out", destroy_user_session_path, method: :delete %>
+<li class="navbar-item"><%=link_to "Existing Reservations", user_reservations_path(current_user), class: "navbar-link"  %></li>
+<li class="navbar-item"><%=link_to "Tasting Notes", user_dishes_path(current_user), class: "navbar-link"  %></li>
+<li class="navbar-item.u-pull-right"><%=link_to "Sign Out", destroy_user_session_path, method: :delete, class: "navbar-link u-pull-right" %></li>
