Drying dinners views

--- a/app/views/dinners/index.html.erb
+++ b/app/views/dinners/index.html.erb
@@ -1,4 +1,4 @@
 <h4>All Upcoming Dinners</h4>
 <p>
-  <%= render partial: "dinners/dinners", collection: Dinner.in_the_future %>
+  <%= render partial: "shared/dinners/dinners", collection: Dinner.in_the_future %>
 </p>
