Dishes do not accept empty names, display errors.

--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -5,4 +5,4 @@
 
 
 <h5>Past</h5>
-<%= render partial: "dhared/dinners/dinners", collection: current_user.dinners.in_the_past, locals: { time: "future" } %>
+<%= render partial: "shared/dinners/dinners", collection: current_user.dinners.in_the_past, locals: { time: "future" } %>
