--- a/app/views/admin/dinners/_form.html.erb
+++ b/app/views/admin/dinners/_form.html.erb
@@ -1,12 +1,13 @@
 <%= form_for dinner, url: admin_dinner_path(dinner), html: {method: "patch"} do |f| %>
 
+  <h4>Dinners:</h4>
+  <div class="">
+    <%= f.label "Date", class: "form-control" %>
+    <%= f.date_field :date, class: "form-control" %>
 
-  <%= f.label "Date", class: "form-control" %>
-  <%= f.date_field :date, class: "form-control" %>
-
-  <%= f.label :chefs, class: "form-control" %>
-  <%= f.text_field :chefs, class: "form-control" %>
-
+    <%= f.label :chefs, class: "form-control" %>
+    <%= f.text_field :chefs, class: "form-control" %>
+  </div>
 
   <h4>Dishes:</h4>
   <div class="">
