--- a/app/views/admin/dinners/_form.html.erb
+++ b/app/views/admin/dinners/_form.html.erb
@@ -1,6 +1,6 @@
 <%= form_for dinner, url: admin_dinner_path(dinner), html: {method: "patch"} do |f| %>
 
-  <h4>Dinners:</h4>
+  <h4>Dinner:</h4>
   <div class="">
     <%= f.label "Date", class: "form-control" %>
     <%= f.date_field :date, class: "form-control" %>
