Adding dish edit, add, index functionality.

--- a/app/views/admin/dishes/_dishes_actions.html.erb
+++ b/app/views/admin/dishes/_dishes_actions.html.erb
@@ -2,4 +2,4 @@
 <%= f.label "Dates" %>
 <%= f.collection_select :dinner_ids, Dinner.order(:date), :id, :display_simpledatetime, {}, {multiple: true, class: 'multi-select'}%><br>
 
-<%= link_to "Delete dish", admin_dish_path(f.object), method: :delete, class: "button" %>
+<%= link_to "Delete dish", admin_dish_path(f.object), method: :delete, class: "button" unless f.object.id == nil %>
