Added ability to delete and edit your own dinner comments.

--- a/app/views/comments/_comments.html.erb
+++ b/app/views/comments/_comments.html.erb
@@ -1,4 +1,8 @@
-<div class="">
+<% if comments.user != current_user %>
+  <div class="">
     <%=comments.user.email%> said...<br>
     <%=comments.content%><br>
-</div>
+  </div>
+<% else %>
+  <%= render partial: 'comments/form', locals: {comments: comments, dinner: dinner} %>
+<% end %>
