--- a/app/views/shared/dishes/_dish_fields.html.erb
+++ b/app/views/shared/dishes/_dish_fields.html.erb
@@ -1,8 +1,10 @@
 <div class="nested-fields">
 
+<% dropdown ||= true %>
   <% unless (f.object.name && f.object.id) || dropdown == false %>
     <%= f.select :id, options_from_collection_for_select(Dish.all.order(:name), :id, :name), {prompt: 'Select or create a new dish'}  %>
   <% end %>
+
 
   <%= f.label :name %>
   <%= f.text_field :name, autofocus: true %><br>
