--- a/app/views/layouts/_guest_navigation.html.erb
+++ b/app/views/layouts/_guest_navigation.html.erb
@@ -1,2 +1,2 @@
-  <li class="navbar-item"><%=link_to "Sign Up", new_user_registration_path %></li>
-  <li class="navbar-item"><%=link_to "Sign In", new_user_session_path %></li>
+  <li class="navbar-item"><%=link_to "Sign Up", new_user_registration_path, class: "navbar-link"   %></li>
+  <li class="navbar-item"><%=link_to "Sign In", new_user_session_path, class: "navbar-link"   %></li>
