--- a/app/views/dinners/_dinner.html.erb
+++ b/app/views/dinners/_dinner.html.erb
@@ -5,11 +5,11 @@
     <% if commentable == true %>
     <details>
       <summary>See Comments...</summary>
-        <%= render partial: 'comments/comments', collection: dinner.comments, locals: {dinner: dinner} %>
-        <%= render partial: 'comments/form', locals: {dinner: dinner, comments: dinner.comments.build(user: current_user)} %>
+        <%= render partial: 'shared/comments/comments', collection: dinner.comments, locals: {object: dinner} %>
+        <%= render partial: 'shared/comments/form', locals: {object: dinner, comments: dinner.comments.build(user: current_user)} %>
     </details>
     <% end %>
 
       <h5>Serving:</h5>
-    <%= render partial: 'dishes/dishes', collection: dinner.dishes, locals: {commentable: true} %>
+    <%= render partial: 'dishes/dish', collection: dinner.dishes, locals: {commentable: true} %>
 </div>
