--- a/app/views/dishes/index.html.erb
+++ b/app/views/dishes/index.html.erb
@@ -1,3 +1,3 @@
 <h4>You've had these dishes in the past...</h4><br>
 
-<%= render partial: 'dishes', collection: @dishes, locals: {commentable: true, my_notes: true} %>
+<%= render partial: 'dish', collection: @dishes, locals: {commentable: true, my_notes: true} %>
