--- a/app/views/shared/comments/_comments.html.erb
+++ b/app/views/shared/comments/_comments.html.erb
@@ -4,5 +4,5 @@
     <%=comments.content%><br>
   </div>
 <% else %>
-  <%= render partial: 'comments/form', locals: {comments: comments, dinner: dinner} %>
+  <%= render partial: 'shared/comments/form', locals: {comments: comments, object: object} %>
 <% end %>
