--- a/app/views/dinners/_dinner.html.erb
+++ b/app/views/dinners/_dinner.html.erb
@@ -11,5 +11,5 @@
     <% end %>
 
       <h5>Serving:</h5>
-    <%= render partial: 'dishes/dish', collection: dinner.dishes, locals: {commentable: true} %>
+    <%= render partial: 'shared/dishes/dish', collection: dinner.dishes, locals: {commentable: true} %>
 </div>
