--- a/app/views/admin/dishes/new.html.erb
+++ b/app/views/admin/dishes/new.html.erb
@@ -1,7 +1,7 @@
   <%= form_for @dish, url: admin_dishes_path, html: { method: :post } do |f| %>
     <div class="dishes-container">
       <%= render '/layouts/errors', object: @dish unless @dish == nil%>
-      <%= render partial: '/shared/dishes/dish_fields', locals: {dropdown: false, f: f} %>
+      <%= render partial: '/shared/dishes/dish_fields', locals: {dropdown: "false", f: f} %>
       <%= f.submit %>
     </div>
   <% end %>
