--- a/app/views/admin/reservations/index.html.erb
+++ b/app/views/admin/reservations/index.html.erb
@@ -1,11 +1,11 @@
-<h4>All Reservations</h4>
+<h5>ALL RESERVATIONS</h5>
 
 <div class="">
-  <h5>Upcoming</h5>
+  <h6 class="tighter">UPCOMING</h6>
     <%=render partial: 'reservation', collection: @dinners_future, as: :d%>
 </div>
 <br>
 <div class="">
-  <h5>Past</h5>
+  <h6 class="tighter">PAST</h6>
     <%=render partial: 'reservation', collection: @dinners_past, as: :d%>
 </div>
