--- a/app/views/dinners/index.html.erb
+++ b/app/views/dinners/index.html.erb
@@ -1,4 +1,4 @@
-<h4>All Upcoming Dinners</h4>
+<h5>ALL UPCOMING DINNERS</h5>
 <p>
   <%= render partial: "shared/dinners/dinners", collection: @dinners %>
 </p>
