--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -114,6 +114,15 @@
 .underline {
   text-decoration: underline;
 }
+.logo {
+  font-family: 'Wire One', sans-serif;
+  margin-bottom: 0px;
+}
+
+.tighter {
+  margin-bottom: 0px;
+}
+
 
 /* Larger than tablet */
 @media (min-width: 750px) {
