--- a/app/views/shared/dinners/_dinners.html.erb
+++ b/app/views/shared/dinners/_dinners.html.erb
@@ -1,4 +1,4 @@
 <p>
-  <h5><%= display_datetime(dinners.date) %></h5>
-  <p><%= dinners.chefs || "Chefs will be announced soon."%> <%= render partial: 'dinners_actions', locals: {dinners: dinners, time: (time ||= nil)} %> </p>
+  <h6 class="tighter"><%= display_datetime(dinners.date) %></h6>
+  <p><%= announce_chefs(dinners) %> <%= render partial: 'dinners_actions', locals: {dinners: dinners, time: (time ||= nil)} %> </p>
 </p>
