Added admin new dish view, new/create controller actions.

--- a/app/views/admin/dinners/index.html.erb
+++ b/app/views/admin/dinners/index.html.erb
@@ -1,2 +1,3 @@
 <h5>ALL DINNERS</h5>
+<%= link_to "Create a new dinner", new_admin_dinner_path, class: "button" %>
 <%= render partial: "shared/dinners/dinners", collection: @dinners %>
