--- a/app/views/admin/dinners/edit.html.erb
+++ b/app/views/admin/dinners/edit.html.erb
@@ -1,1 +1,3 @@
-<%= render partial: 'form', locals: {dinner: @dinner} %>
+<%= form_for @dinner, url: admin_dinner_path(@dinner), html: {method: "patch"} do |f| %>
+  <%= render partial: 'form', locals: {dinner: @dinner, f: f} %>
+<% end %>
