--- a/app/views/admin/dinners/_form.html.erb
+++ b/app/views/admin/dinners/_form.html.erb
@@ -3,7 +3,7 @@
   <h5>DINNER:</h5>
   <div class="">
     <%= f.label "Date", class: "form-control" %>
-    <%= f.date_field :date, class: "form-control" %>
+    <%= f.datetime_field :date, class: "form-control" %>
 
     <%= f.label :chefs, class: "form-control" %>
     <%= f.text_field :chefs, class: "form-control" %>
