--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,5 +1,5 @@
 <h5>ALL RESERVATIONS</h5>
-
+<%= render "layouts/errors", object: @reservation unless @reservation == nil %>
 <h6>UPCOMING</h6>
 <%= render partial: "shared/dinners/dinners", collection: current_user.dinners.in_the_future, locals: { time: "past" } %>
 
