--- a/app/views/reservations/_dinners_actions.html.erb
+++ b/app/views/reservations/_dinners_actions.html.erb
@@ -1,17 +1,20 @@
 <% if time == "past" %>
 
-  <%= form_for [dinners, current_user.reservation_for(dinners)] do |f| %>
-    <%= f.hidden_field :user_id %>
-    <%= f.hidden_field :dinner_id %>
-    <%= f.number_field :party_of, placeholder: "Party of...", min: 1, class: "form-control" %>
-    <%= f.submit %>
-  <% end %>
+  <details class="tighter">
+    <summary>Edit or cancel this reservation</summary>
+    <%= form_for [dinners, current_user.reservation_for(dinners)] do |f| %>
+      <%= f.hidden_field :user_id %>
+      <%= f.hidden_field :dinner_id %>
+      <%= f.number_field :party_of, placeholder: "Party of...", min: 1, class: "form-control" %>
+      <%= f.submit %>
+    <% end %>
 
-  <%= form_for [dinners, current_user.reservation_for(dinners)], method: :delete do |f| %>
-    <%= f.hidden_field :user_id %>
-    <%= f.hidden_field :dinner_id %>
-    <%= f.submit "Cancel Reservation" %>
-  <% end %>
+    <%= form_for [dinners, current_user.reservation_for(dinners)], method: :delete do |f| %>
+      <%= f.hidden_field :user_id %>
+      <%= f.hidden_field :dinner_id %>
+      <%= f.submit "Cancel Reservation" %>
+    <% end %>
+  </details>
 
 <% else %>
 
