--- a/app/views/admin/dinners/index.html.erb
+++ b/app/views/admin/dinners/index.html.erb
@@ -1,3 +1,19 @@
 <h5>ALL DINNERS</h5>
 <%= link_to "Create a new dinner", new_admin_dinner_path, class: "button" %>
 <%= render partial: "shared/dinners/dinners", collection: @dinners %>
+<!-- <script type="text/javascript" charset="utf-8">
+$(function () {
+  $(".js-next").on("click", function() {
+    var nextId = parseInt($(".js-next").attr("data-id")) + 1;
+    $.get("/posts/" + nextId + ".json", function(data) {
+      // get post
+      var post = data["post"];
+      $(".authorName").text(post["author"]["name"]);
+      $(".postTitle").text(post["title"]);
+      $(".postBody").text(post["description"]);
+      // re-set the id to current on the link
+      $(".js-next").attr("data-id", post["id"]);
+    });
+  });
+});
+</script> -->
