--- a/app/views/admin/dinners/_dinners_actions.html.erb
+++ b/app/views/admin/dinners/_dinners_actions.html.erb
@@ -4,23 +4,20 @@
 
 
 <script type="text/javascript" charset="utf-8">
+
   $("#viewRes-<%=dinners.id%>").on("click", function() {
     event.preventDefault();
     $.get("/dinners/<%=dinners.id%>/reservations.json", function(data) {
-       var reservations = data;
-       $(".reservations-<%=dinners.id%>").append("<h5>Parties of:</h6>")
-       if (typeof reservations === "array") {
-         for (var reservation in reservations) {
-           $(".reservations-<%=dinners.id%>").append("<ul><li><a href=/admin/reservations/"+reservations[reservation].id+"/edit>"+reservations[reservation].party_of+"</a></li></ul>")
+       var res = data;
+       $(".reservations-<%=dinners.id%>").append("<h6>Parties of:</h6>")
+       if (typeof res === "array") {
+         for (var r in res) {
+           $(".reservations-<%=dinners.id%>").append("<ul><li><a href=#>"+res[r].party_of+"</a></li></ul>")
          }
        } else {
-         $(".reservations-<%=dinners.id%>").append("<ul><li><a href=/admin/reservations/"+reservations.id+"/edit>"+reservations.party_of+"</a></li></ul>")
+         $(".reservations-<%=dinners.id%>").append("<ul><li><a href=/admin/reservations/"+res.id+"/edit>"+res.party_of+"</a></li></ul>")
       }
-      // $(".authorName").text(post["author"]["name"]);
-      // $(".postTitle").text(post["title"]);
-      // $(".postBody").text(post["description"]);
-      // // re-set the id to current on the link
-      // $(".js-next").attr("data-id", post["id"]);
     });
   });
+
 </script>
