Added modal for reservation edits

--- a/app/views/admin/dinners/index.html.erb
+++ b/app/views/admin/dinners/index.html.erb
@@ -1,3 +1,26 @@
 <h5>ALL DINNERS</h5>
 <%= link_to "Create a new dinner", new_admin_dinner_path, class: "button" %>
 <%= render partial: "shared/dinners/dinners", collection: @dinners %>
+
+<div class="modal">
+  <div class="modal-inner">
+    <div class="modal-content">
+      <div class="modal-close-icon">
+        <a href="javascript:void(0)" class="close-modal"><i class="fa fa-times" aria-hidden="true"></i></a>
+      </div>
+      <div class="modal-content-inner">
+        <h4>This is the heading</h4>
+        <p>Donec volutpat nisi nisl, sit amet facilisis enim lobortis sed. </p>
+      </div>
+      <hr class="modal-buttons-seperator">
+      <div class="modal-buttons">
+        <button class="button close-modal">Cancel</button>
+        <button class="button button-primary close-modal">OK</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<script type="text/javascript">
+  $(document).ready(setModal);
+</script>
