Set up modal content.

--- a/app/views/admin/dinners/index.html.erb
+++ b/app/views/admin/dinners/index.html.erb
@@ -9,13 +9,18 @@
         <a href="javascript:void(0)" class="close-modal"><i class="fa fa-times" aria-hidden="true"></i></a>
       </div>
       <div class="modal-content-inner">
-        <h4>This is the heading</h4>
-        <p>Donec volutpat nisi nisl, sit amet facilisis enim lobortis sed. </p>
+        <h4 class="reservation-title">Reservation</h4>
+        <form class="reservation-form">
+          <div class="reservation-partyof">
+            Party of:
+            <input type="number" name="party-of"><br>
+          </div>
+        </form>
       </div>
       <hr class="modal-buttons-seperator">
       <div class="modal-buttons">
         <button class="button close-modal">Cancel</button>
-        <button class="button button-primary close-modal">OK</button>
+        <button class="button button-primary close-modal submit">OK</button>
       </div>
     </div>
   </div>
