Moving click handler to document ready

--- a/app/views/admin/dinners/index.html.erb
+++ b/app/views/admin/dinners/index.html.erb
@@ -27,5 +27,10 @@
 </div>
 
 <script type="text/javascript">
-  $(document).ready(setModal);
+  $(document).ready(function(){
+    setModal();
+    $("a[data-dinnID]").click(function(event){
+      viewRes(event);
+    });
+  });
 </script>
